--- a/a11a.html
+++ b/a11a.html
@@ -6,7 +6,7 @@
         <title>Clasa a XI-a A</title>
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./9s/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <div class="header-wrapper">
@@ -50,7 +50,7 @@
                 <span class="heart-icon">
                     <i class="fa fa-heart"></i>
                 </span>
-                <img src="./11i/perm.png">
+                <img src="perm.png">
                 <br>
                 <div class="offers-content">
                     <span class="name"> <b> <i>Algebră-Permutări</i></b> </span>
@@ -72,7 +72,7 @@
                     <span class="heart-icon">
                         <i class="fa fa-heart"></i>
                     </span>
-                    <img src="./11i/calc.PNG">
+                    <img src="calc.PNG">
                     <br>
                     <div class="offers-content">
                         <span class="name"> <b><i>Analiză</i></b></span>
@@ -93,7 +93,7 @@
                     <span class="heart-icon">
                         <i class="fa fa-heart"></i>
                     </span>
-                    <img src="./11i/mat.PNG">
+                    <img src="mat.PNG">
                     <br>
                     <div class="offers-content">
                         <span class="name"> <b><i>Algebră-Matrici</i></b></span>
@@ -113,7 +113,7 @@
         </div>
     </div>
 </section>
-<script src="./9j/script.js">
+<script src="script.js">
 
 </script>
 <script>
