--- a/a12a.html
+++ b/a12a.html
@@ -6,7 +6,7 @@
         <title>Clasa a XII-a A</title>
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./9s/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <div class="header-wrapper">
@@ -23,7 +23,7 @@
                        <li class="is-current"> <a href="a12a.html">a XII-a</a></li>
                     </ul>
                     <div class="btn-wrap">
-                        <a href="./pagp.html">Acasă</a>
+                        <a href="pagp.html">Acasă</a>
                     </div>
                 </div>
              <div class="toggleicon">
@@ -50,7 +50,7 @@
                 <span class="heart-icon">
                     <i class="fa fa-heart"></i>
                 </span>
-                <img src="./12i/corp.PNG">
+                <img src="corp.PNG">
                 <br>
                 <div class="offers-content">
                     <span class="name"> <b> <i>Grupuri</i></b> </span>
@@ -72,7 +72,7 @@
                     <span class="heart-icon">
                         <i class="fa fa-heart"></i>
                     </span>
-                    <img src="./12i/analiza.PNG">
+                    <img src="analiza.PNG">
                     <br>
                     <div class="offers-content">
                         <span class="name"> <b><i>Analiză</i></b></span>
@@ -92,7 +92,7 @@
                     <span class="heart-icon">
                         <i class="fa fa-heart"></i>
                     </span>
-                    <img src="./12i/polinom.PNG">
+                    <img src="polinom.PNG">
                     <br>
                     <div class="offers-content">
                         <span class="name"> <b><i>Polinoame</i></b></span>
@@ -112,7 +112,7 @@
         </div>
     </div>
 </section>
-<script src="./9j/script.js">
+<script src="script.js">
 
 </script>
 <script>
