--- a/noua.html
+++ b/noua.html
@@ -6,7 +6,7 @@
         <title>Clasa a IX-a A</title>
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./9s/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <div class="header-wrapper">
@@ -23,7 +23,7 @@
                        <li> <a href="a12a.html">a XII-a</a></li>
                     </ul>
                     <div class="btn-wrap">
-                        <a href="./pagp.html">Acasă</a>
+                        <a href="pagp.html">Acasă</a>
                     </div>
                 </div>
              <div class="toggleicon">
@@ -50,7 +50,7 @@
                 <span class="heart-icon">
                     <i class="fa fa-heart"></i>
                 </span>
-                <img src="./9i/algebra1.PNG">
+                <img src="algebra1.PNG">
                 <br>
                 <div class="offers-content">
                     <span class="name"> <b> <i>Algebră</i></b> </span>
@@ -72,7 +72,7 @@
                     <span class="heart-icon">
                         <i class="fa fa-heart"></i>
                     </span>
-                    <img src="./9i/trigono.PNG">
+                    <img src="trigono.PNG">
                     <br>
                     <div class="offers-content">
                         <span class="name"> <b><i>Trigonometrie</i></b></span>
@@ -93,7 +93,7 @@
                     <span class="heart-icon">
                         <i class="fa fa-heart"></i>
                     </span>
-                    <img src="./9i/vectori.PNG">
+                    <img src="vectori.PNG">
                     <br>
                     <div class="offers-content">
                         <span class="name"> <b><i>Geometrie vectorială și analitică</i></b></span>
@@ -113,7 +113,7 @@
         </div>
     </div>
 </section>
-<script src="./9j/script.js">
+<script src="script.js">
 
 </script>
 <script>
