--- a/a12a.html
+++ b/a12a.html
@@ -23,7 +23,7 @@
                        <li class="is-current"> <a href="a12a.html">a XII-a</a></li>
                     </ul>
                     <div class="btn-wrap">
-                        <a href="pagp.html">Acasă</a>
+                        <a href="index.html">Acasă</a>
                     </div>
                 </div>
              <div class="toggleicon">
