--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                            <li> <a href="a12a.html">a XII-a</a></li>
                         </ul>
                         <div class="btn-wrap">
-                            <a href="pagp.html">Acasă</a>
+                            <a href="index.html">Acasă</a>
                         </div>
                     </div>
                  <div class="toggleicon">
@@ -68,7 +68,7 @@
                 </div>
                 <div class="right-content"> 
                     <div class="hero-image-box">
-                        <img src="./9i/mate1.PNG" alt="Hero Images">
+                        <img src="mate1.PNG" alt="Hero Images">
                     </div>
                 </div>
              </div>
