--- a/cartealg.html
+++ b/cartealg.html
@@ -7,7 +7,7 @@
     <title>Carte algebră</title>
     <link rel="stylesheet" href="./9s/cartealg.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="./9j/main.js" defer></script>
+    <script src="main.js" defer></script>
     <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
     
 </head>
@@ -26,7 +26,7 @@
                <li> <a href="a12a.html">a XII-a</a></li>
             </ul>
             <div class="btn-wrap">
-                <a href="pagp.html">Acasă</a>
+                <a href="index.html">Acasă</a>
             </div>
         </div>
      <div class="toggleicon">
