--- a/cartealg.html
+++ b/cartealg.html
@@ -249,7 +249,7 @@
             </p>
             <p> Graficul funcției este o <b>parabolă</b>, a cărui vârf este de abscisă \( -\frac{b}{2a} \), și ordonată \( -\frac{ \Delta}{4a} \).</p> 
             <p>Ramurile graficului sunt influențate de valoarea lui a, astfel că dacă <b> \( a\lt 0 \) </b> atunci ramurile vor fi în jos, iar dacă <b> \( a\gt 0 \) </b> ramurile vor fi situate în sus.</p>
-              <img style=" display: block; margin-left: auto; margin-right: auto; width:100%;" src="./9i/f2.PNG">
+              <img style=" display: block; margin-left: auto; margin-right: auto; width:100%;" src="f2.PNG">
            </div>
        
         </div>
@@ -307,7 +307,7 @@
           P \lt 0 \\
       \end{cases}
       \]
-      <img style=" display: block; margin-left: auto; margin-right: auto; width:100%;" src="./9i/f3.PNG">
+      <img style=" display: block; margin-left: auto; margin-right: auto; width:100%;" src="f3.PNG">
            </div>
        
         </div>
