--- a/carteana.html
+++ b/carteana.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carte analiză</title>
-    <link rel="stylesheet" href="./9s/carteana.css">
+    <link rel="stylesheet" href="carteana.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="./9j/ana.js" defer></script>
+    <script src="ana.js" defer></script>
     <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
     
 </head>
@@ -26,7 +26,7 @@
                <li> <a href="a12a.html">a XII-a</a></li>
             </ul>
             <div class="btn-wrap">
-                <a href="pagp.html">Acasă</a>
+                <a href="index.html">Acasă</a>
             </div>
         </div>
      <div class="toggleicon">
@@ -144,7 +144,7 @@
       <div class="back">
         <div id="b4" class="back-content">
          <h2>Tabel derivate</h2>
-         <img src="./11i/derivate.PNG" width="100%" height="90%">
+         <img src="derivate.PNG" width="100%" height="90%">
      </div>
      </div>
     </div>
@@ -154,7 +154,7 @@
         <h3>Rolul derivatelor în studiul funcțiilor</h3> <br>
         <li>Determinarea intervalelor de monotonie: Dacă \(f'(x) \ge 0\) funcția este strict crescătoare. Dacă \(f'(x) \le 0\) funcția este strict descrescătoare.</li><br>
         <li>Puncte de extrem: </li>
-        <img src="./11i/pctmaxim.PNG" width="100%"> <br>
+        <img src="pctmaxim.PNG" width="100%"> <br>
         <li>Determinarea intervalelor de covexitate/concavitate: Dacă \(f"(x) \ge 0\) funcția este convexă. Dacă \(f"(x) \le 0\) funcția este concavă.</li><br>
 
       </div>
@@ -166,7 +166,7 @@
          <li>A. Orizontale: \(y=\lim_{x \to \infty}{f(x)} \in \mathbb{R}\), analog spre \(-\infty\)</li>
          <li>A. Verticale: \(x=\lim_{x \to x_0}{f(x)} = \pm \infty\)</li>
         <li>A. Oblice: y=mx+n, unde \(m=\lim_{x \to \infty}{\frac{f(x)}{x}}\), iar \(n=\lim_{x \to \infty}{f(x)-mx}\)</li>
-        <img src="./11i/asimptote.PNG" width="100%"> <br>
+        <img src="asimptote.PNG" width="100%"> <br>
       </div>
       </div>
      </div>
