--- a/zece.html
+++ b/zece.html
@@ -93,7 +93,7 @@
                     <span class="heart-icon">
                         <i class="fa fa-heart"></i>
                     </span>
-                    <img src="comp.PNG">
+                    <img src="complex.PNG">
                     <br>
                     <div class="offers-content">
                         <span class="name"> <b><i>Numere complexe</i></b></span>
