--- a/cartefct.html
+++ b/cartefct.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carte funcții</title>
-    <link rel="stylesheet" href="./9s/cartetrig.css">
+    <link rel="stylesheet" href="cartetrig.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="./10j/fct.js" defer></script>
+    <script src="fct.js" defer></script>
     <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
     
 </head>
@@ -26,7 +26,7 @@
                <li> <a href="a12a.html">a XII-a</a></li>
             </ul>
             <div class="btn-wrap">
-                <a href="pagp.html">Acasă</a>
+                <a href="index.html">Acasă</a>
             </div>
         </div>
      <div class="toggleicon">
@@ -51,7 +51,7 @@
           <p> \(a^0=1, \forall a \in \mathbb{R}\) </p> <br>
           <p> \(a^{-x}=\frac{1}{a^x}, \forall a,x \in \mathbb{R}\)</p> <br>
         </div>
-          <img src="./10i/exp.png" width="100%">
+          <img src="exp.png" width="100%">
   </div>
    </div>
    <div class="back">
@@ -81,7 +81,7 @@
           <li> <b>Notație</b>: x= \(\log_a b\)</li> <br>
           <li> <b>Observație</b>: \(\log_a 1=0\) și \(\log_a a=1\).</li> <br>
           <li> <b>Logaritmi particulari</b>: lg x= \(\log_{10} x\)(logaritm zecimal) și ln x=\(\log_e x\)(logaritm natural).</li> <br>
-         <img src="./10i/lg.PNG" width="100%">
+         <img src="lg.PNG" width="100%">
         </div>
       </div>
       <div class="back">
