--- a/cartefct.html
+++ b/cartefct.html
@@ -51,7 +51,7 @@
           <p> \(a^0=1, \forall a \in \mathbb{R}\) </p> <br>
           <p> \(a^{-x}=\frac{1}{a^x}, \forall a,x \in \mathbb{R}\)</p> <br>
         </div>
-          <img src="exp.png" width="100%">
+          <img src="exp.PNG" width="100%">
   </div>
    </div>
    <div class="back">
