--- a/cartegeom.html
+++ b/cartegeom.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carte geometrie</title>
-    <link rel="stylesheet" href="./9s/cartealg.css">
+    <link rel="stylesheet" href="cartealg.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="./9j/geo.js" defer></script>
+    <script src="geo.js" defer></script>
     <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
     
 </head>
@@ -26,7 +26,7 @@
                <li> <a href="a12a.html">a XII-a</a></li>
             </ul>
             <div class="btn-wrap">
-                <a href="pagp.html">Acasă</a>
+                <a href="index.html">Acasă</a>
             </div>
         </div>
      <div class="toggleicon">
@@ -57,7 +57,7 @@
     <div id="b1" class="back-content">
       <li> Înmulțirea unui vector cu un scalar se realizează schimbând lungimea vectorului de \( \alpha \) ori și eventual sensul când \( \alpha \) este negativ.</li>
           <li> \( \vec v \) și \( \vec u\) sunt <b>coliniari</b> dacă au aceeași direcție sau \(\exists \; \alpha \in \mathbb{R} : \vec u= \alpha \cdot \vec v\).</li> <br>
-          <img src="./9i/vector.PNG" width="100%">
+          <img src="vector.PNG" width="100%">
         </div>
 
  </div>
@@ -91,7 +91,7 @@
          <h2> Coliniaritate și concurență</h2> <br>
          <li> <b>Teorema lui Menelaus </b>: Fie \( \Delta ABC \) și punctele \( A' \in BC \;, B' \in AC \; și  \;C' \in AB \) astfel încât două sunt pe laturi, iar unul pe prelungirea laturii sau toate trei pe prelungirile laturilor. Atunci A,B,C coliniare \( \iff \)</li> <br>
          <li><b>Teorema lui Ceva </b>: Fie \( \Delta ABC \) și punctele \( A' \in BC \;, B' \in AC \; și  \;C' \in AB \). Atunci cevienele AA', BB' și CC' sunt concurente \(\iff\)</li> <br>
-         <img src="./9i/teo2.png" width="100%">
+         <img src="teo2.png" width="100%">
            </div>
        
         </div>
