--- a/cartegeom.html
+++ b/cartegeom.html
@@ -91,7 +91,7 @@
          <h2> Coliniaritate și concurență</h2> <br>
          <li> <b>Teorema lui Menelaus </b>: Fie \( \Delta ABC \) și punctele \( A' \in BC \;, B' \in AC \; și  \;C' \in AB \) astfel încât două sunt pe laturi, iar unul pe prelungirea laturii sau toate trei pe prelungirile laturilor. Atunci A,B,C coliniare \( \iff \)</li> <br>
          <li><b>Teorema lui Ceva </b>: Fie \( \Delta ABC \) și punctele \( A' \in BC \;, B' \in AC \; și  \;C' \in AB \). Atunci cevienele AA', BB' și CC' sunt concurente \(\iff\)</li> <br>
-         <img src="teo2.png" width="100%">
+         <img src="teo2.PNG" width="100%">
            </div>
        
         </div>
