--- a/carteint.html
+++ b/carteint.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carte integrale</title>
-    <link rel="stylesheet" href="./9s/cartetrig.css">
+    <link rel="stylesheet" href="cartetrig.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="./10j/fct.js" defer></script>
+    <script src="fct.js" defer></script>
     <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
     
 </head>
@@ -26,7 +26,7 @@
                <li class="is-current"> <a href="a12a.html">a XII-a</a></li>
             </ul>
             <div class="btn-wrap">
-                <a href="pagp.html">Acasă</a>
+                <a href="index.html">Acasă</a>
             </div>
         </div>
      <div class="toggleicon">
@@ -58,7 +58,7 @@
  </div>
  <div class="back">
     <div id="b1" class="back-content">
-        <img src="./12i/integrale.PNG" width="100%" height="100%">
+        <img src="integrale.PNG" width="100%" height="100%">
         </div>
 
  </div>
@@ -98,7 +98,7 @@
            <div id="f3" class="front-content">
          <h2>Sume Riemann</h2> <br>
          <li> Fie \(f: [0,1] \to \mathbb{R}\) integrabilă \(\lim_{n \to \infty}a_n= \int_0^1 f(x)dx\)</li> <br>
-         <img src="./12i/riemann.PNG" width="100%" >
+         <img src="riemann.PNG" width="100%" >
          </div>
        
         </div>
