--- a/cartemat.html
+++ b/cartemat.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carte matrici</title>
-    <link rel="stylesheet" href="./9s/cartealg.css">
+    <link rel="stylesheet" href="cartealg.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="./10j/matrice.js" defer></script>
+    <script src="matrice.js" defer></script>
     <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
     
 </head>
@@ -26,7 +26,7 @@
                <li> <a href="a12a.html">a XII-a</a></li>
             </ul>
             <div class="btn-wrap">
-                <a href="pagp.html">Acasă</a>
+                <a href="index.html">Acasă</a>
             </div>
         </div>
      <div class="toggleicon">
@@ -46,7 +46,7 @@
  <div class="front">
     <div id="f1" class="front-content">
     <h1>Matrici</h1>  <br> <br> <br>
-    <img src="./11i/matrice1.PNG" width="100%">
+    <img src="matrice1.PNG" width="100%">
 </div>
  </div>
  <div class="back">
@@ -54,7 +54,7 @@
         <h1> Operații cu matrici</h1>
         <li> Adunarea a două matrici se realizează adunând elementele de pe poziția i și j din prima matrice și a doua matrice.</li>
     <li>Înmulțirea matricilor se realizează astfel</li>
-    <img src="./11i/inmultire.PNG" width="90%">
+    <img src="inmultire.PNG" width="90%">
     </div>
  </div>
   </div>
@@ -78,7 +78,7 @@
         <h2> Transpusa</h2>
         <li>Transpusa unei matrici se notează \(A^t\) și se scrie înlocuind liniile cu coloanele matricei A.</li>
         <h3> Relația Hamilton-Cayley</h3>
-        <img src="./11i/ch.PNG" width="100%">
+        <img src="ch.PNG" width="100%">
     </div>
     </div>
      </div>
@@ -87,9 +87,9 @@
            <div id="f3" class="front-content">
             <h1>Determinanți</h1>
         <li>Regula Triunghiului.</li>
-        <img src="./11i/triunghi.PNG" width="100%"> <br>
+        <img src="triunghi.PNG" width="100%"> <br>
         <li>Regula lui Sarrus</li>
-        <img src="./11i/sarrus.PNG" width="100%"> <br>
+        <img src="sarrus.PNG" width="100%"> <br>
          </div>
        
         </div>
@@ -121,7 +121,7 @@
            <div id="b4" class="back-content">
                <h2>Determinanți particulari</h2>
                <li>1. Vandermonde</li>
-               <img src="./11i/van.PNG" width="100%">
+               <img src="van.PNG" width="100%">
                 </div>
         </div>
     </div>
@@ -131,7 +131,7 @@
             <h2>Determinanți particulari</h2>
                <li>2. Triunghiulari</li> <br>
                <li>Elementele de sub sau deasupra DP sunt egale cu 0.</li> <br>
-               <img src="./11i/tr.PNG" width="100%">
+               <img src="tr.PNG" width="100%">
            </div> 
     </div>
         <div class="back">
