--- a/a11a.html
+++ b/a11a.html
@@ -50,7 +50,7 @@
                 <span class="heart-icon">
                     <i class="fa fa-heart"></i>
                 </span>
-                <img src="perm.png">
+                <img src="perm.PNG">
                 <br>
                 <div class="offers-content">
                     <span class="name"> <b> <i>Algebră-Permutări</i></b> </span>
