--- a/carteperm.html
+++ b/carteperm.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carte Permutări</title>
-    <link rel="stylesheet" href="./9s/cartetrig.css">
+    <link rel="stylesheet" href="cartetrig.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="./10j/fct.js" defer></script>
+    <script src="fct.js" defer></script>
     <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
     
 </head>
@@ -26,7 +26,7 @@
                <li> <a href="a12a.html">a XII-a</a></li>
             </ul>
             <div class="btn-wrap">
-                <a href="pagp.html">Acasă</a>
+                <a href="index.html">Acasă</a>
             </div>
         </div>
      <div class="toggleicon">
@@ -48,11 +48,11 @@
       <h1>Permutări</h1> <br> <br>
       <div style="font-size: medium">
       <li> Numim <b>permutare</b> de grad n, orice funcție bijectivă \( \sigma : A \rightarrow A\) </li> 
-      <img src="./11i/sigma.PNG" width="70%">
+      <img src="sigma.PNG" width="70%">
       <p>Numărul tuturor perutărilor este \( S_n =n!\)</p> 
       <li>Permutarea identică se notează cu e.</li> 
       <p>Produsul(compunerea) permutărilor</p>
-      <img src="./11i/comp.PNG" width="90%">
+      <img src="comp.PNG" width="90%">
      </div>
   </div>
    </div>
