--- a/cartepol.html
+++ b/cartepol.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carte polinoame</title>
-    <link rel="stylesheet" href="./9s/cartetrig.css">
+    <link rel="stylesheet" href="cartetrig.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="./10j/fct.js" defer></script>
+    <script src="fct.js" defer></script>
     <script src="https://kit.fontawesome.com/3a5042ecb0.js" crossorigin="anonymous"></script>
     
 </head>
@@ -26,7 +26,7 @@
                <li class="is-current"> <a href="a12a.html">a XII-a</a></li>
             </ul>
             <div class="btn-wrap">
-                <a href="pagp.html">Acasă</a>
+                <a href="index.html">Acasă</a>
             </div>
         </div>
      <div class="toggleicon">
@@ -50,7 +50,7 @@
       <li> Teorema împărțirii cu rest: Fiind date 2 polinoame f,g; există două polinoame unice q,r cu grad r \(\lt\) grad g astfel încât \(f=g \cdot q +r\)</li>
       <li>Teorema restului: Restul împărțirii unui polinom f la „X-a” este r=f(a) </li> <br>
       <li>Schema lui Horner: Câtul și restul împărțirii unui polinom \(f=a_nX^n+a_{n-1}X^{n-1}+ \dots + a_1X+ a_0\) la polinomul \(g=X-a\)</li> <br>
-      <img src="./12i/horner2.PNG" width="100%" height="25%">
+      <img src="horner2.PNG" width="100%" height="25%">
     </div>
     </div>
 
