--- a/cartetrig.html
+++ b/cartetrig.html
@@ -58,7 +58,7 @@
    <div class="back">
       <div id="b1" class="back-content">
           <h2> Cercul trigonometric</h2>
-           <img src="cerc.png" width="90%"> 
+           <img src="cerc.PNG" width="90%"> 
            <h2> Tabel de valori</h2>
           <table>
             <tr style="border-bottom: 1px solid black ;">
